@@ -3,6 +3,7 @@ edk2 (0~20161124.4575a602-1) UNRELEASED; urgency=medium
   * New upstream release.
     - GOP driver for the VirtIo GPU (virtio-gpu-pci). Closes: #842680.
   * Add myself to Uploaders.
+  * debian/rules: Set OpenSSL version in one place.
 
  -- dann frazier <dannf@debian.org>  Wed, 30 Nov 2016 19:45:00 -0700
 
